--- a/lab-00.Rmd
+++ b/lab-00.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lab 00 - Hello IDS!"
-author: "INSERT YOUR NAME HERE"
+author: "Stuart Wang"
 date: "`r Sys.Date()`"
 output: html_document
 ---
@@ -17,15 +17,15 @@ We set up the data frame. Edit the data below to include information about your 
 
 ```{r setup-tibble}
 team_data <- tibble(
-  name = c("Peter Rabbit", "member 1", "member 2", 
-           "member 3", "member 4"),
-  github_username = c("mcgregors-garden", "username 1", "username 2", 
-                      "username 3", "username 4"), 
-  colour = c("powderblue", "colour 1", "colour 2", 
-             "colour 3", "colour 4"),
-  hobby = c("Hopping", "hobby 1", "hobby 2", 
-            "hobby 3", "hobby 4"),
-  favourite_number = c(2, NA, NA, NA, NA)
+  name = c("magnus", "stuart", "ben", 
+           "sophie", "tobby"),
+  github_username = c("mcgregors-garden", "stuart620", "sophie333", 
+                      "ben234", "maginus255"), 
+  colour = c("powderblue", "black", "purple", 
+             "brown", "red"),
+  hobby = c("Hopping", "sleeping", "swmming", 
+            "climbing", "running"),
+  favourite_number = c(2, 15, 6, 8, 19)
   )
 
 team_data
